@@ -20,14 +20,14 @@ addcode <- function(name,conName="qdacon",assignenv=.rqda,...) {
 
 
 
-CodeNamesUpdate <- function(CodeNamesWidget=.rqda$.codes_rqda,sort=TRUE,decreasing = FALSE,...)
+CodeNamesUpdate <- function(CodeNamesWidget=.rqda$.codes_rqda,sortByTime=TRUE,decreasing = FALSE,...)
 {
   if (isIdCurrent(.rqda$qdacon)){
-  freecode <- dbGetQuery(.rqda$qdacon, "select name, id,date from freecode where status=1")
+  freecode <- dbGetQuery(.rqda$qdacon, "select name, id,date from freecode where status=1 order by lower(name)")
   codeName <- freecode$name
   if (nrow(freecode)!=0) {
     Encoding(codeName) <- "UTF-8"
-    if (sort){
+    if (sortByTime){
       codeName <- codeName[OrderByTime(freecode$date,decreasing=decreasing)]
     }
   }
@@ -35,16 +35,16 @@ CodeNamesUpdate <- function(CodeNamesWidget=.rqda$.codes_rqda,sort=TRUE,decreasi
   } else gmessage("Cannot update Code List in the Widget. Project is closed already.\n",con=TRUE)
 }
 
-CodeNamesWidgetUpdate <- function(CodeNamesWidget=.rqda$.codes_rqda,sort=TRUE,decreasing = FALSE,CodeId=NULL,...)
+CodeNamesWidgetUpdate <- function(CodeNamesWidget=.rqda$.codes_rqda,sortByTime=TRUE,decreasing = FALSE,CodeId=NULL,...)
   ## CodeNamesWidgetUpdate is the alternative function of CodeNamesUpdate, should be used afterwards
 {
   if (isIdCurrent(.rqda$qdacon)){
-    freecode <- dbGetQuery(.rqda$qdacon, "select name, id,date from freecode where status=1")
+    freecode <- dbGetQuery(.rqda$qdacon, "select name, id,date from freecode where status=1 order by lower(name)")
     if (nrow(freecode)!=0) {
       if (!is.null(CodeId)) {freecode <- freecode[freecode$id %in% CodeId,]}
       codeName <- freecode$name
       Encoding(codeName) <- "UTF-8"
-      if (sort){
+      if (sortByTime){
         codeName <- codeName[OrderByTime(freecode$date,decreasing=decreasing)]
       }
     }
