@@ -6,3 +6,7 @@ inter-coder reliability
 
 export C-Cat to mm format http://freemind.sourceforge.net/wiki/index.php/File_format
 or just use igraph package to plot a relationship plot
+
+Attributes/Variable of Case
+
+In cases Tab, update "files of this case" after marking a file.
