@@ -87,7 +87,7 @@ h1 {
 <p>HUANG Ronggui (2008). RQDA: R-based Qualitative Data Analysis. R package version 0.1.6. http://rqda.r-forge.r-project.org/
 
 <h1>What's new in the latest version?</h1>
-<p>RQDA is now on <A href ="http://cran.r-project.org/web/packages/RQDA/index.html" target="_blank">CRAN</a>.
+<p>RQDA is now on <A href ="http://cran.r-project.org/web/packages/RQDA/index.html" target="_blank">CRAN</a>(2008-12-26).
 <p>RQDA has been actively developed. You can click <A HREF="ChangeLog.txt">here</A> to see the new features.
 
 <h1>More Informaiton</h1>
