@@ -1,3 +1,8 @@
+2009-03-16
+	* The default order of codes is alphabetical.
+	* minor bug of "Add" buttons.
+	* minor modification of OpenProjectButton() to make it more informative.
+
 2009-03-12
 	* Fix minor bug of "Search File..." of popup menu in File Tab.
 
